# robust_position_control

./: README.md
Hackathon Docs/: Hackathon_Architecture.odt  launch_wiki~
hackathon_docs/: Hackathon_Presentation.odp  Topic_Description.odt
robust_position_control_constraints/: CMakeLists.txt  package.xml
robust_position_control_constraints/config/: configuration_parameters.yaml
robust_position_control_constraints/launch/: robust_position_control_constraints.launch
robust_position_control_constraints/src/: robust_position_control_constraints_node.cpp
robust_position_control_diagrams/: trapeziod
robust_position_control_diagrams/DIA/: hackathon_compnent.dia  hackathon_system_overview.dia  hackaton_system_overview.dia
robust_position_control_test_unit/: CMakeLists.txt  package.xml
robust_position_control_test_unit/scripts/: robust_position_control_test_unit.py
robust_position_controller/: CMakeLists.txt  package.xml
robust_position_controller/common/include/robust_position_controller/: velocity_generator.h  velocity_profile_generator.h
robust_position_controller/common/src/: velocity_generator.cpp  velocity_profile_generator.cpp
robust_position_controller/config/: configuration_parameters.yaml
robust_position_controller/launch/: robust_position_controller.launch
robust_position_controller/ros/include/robust_position_controller/: robust_position_controller.h
robust_position_controller/ros/src/: robust_position_controller.cpp  robust_position_controller_node.cpp
