<?xml version="1.0"?>
<package>
  <name>robust_position_control_constraints</name>
  <version>0.1.0</version>
  <description>The robust_position_control_constraints package</description>

  <maintainer email="shehzad@todo.todo">shehzad</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>